--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.3.2",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -46,10 +51,12 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.35",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -59,6 +66,7 @@
     "eslint-config-next": "^14.0.1",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.447.0",
     "match-sorter": "^6.3.4",
     "next": "^14.2.3",
@@ -72,6 +80,8 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
@@ -87,6 +97,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
+    "@types/react": "^18.3.12",
     "@types/sort-by": "^1.2.3",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
