--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.447.0",
     "match-sorter": "^6.3.4",
+    "microcms-js-sdk": "^3.1.2",
     "next": "^14.2.3",
     "next-auth": "^4.24.8",
     "next-themes": "^0.2.1",
