--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "^2.3.0",
+    "@slack/webhook": "^7.0.3",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.35",
     "@tanstack/react-table": "^8.10.7",
